--- a/db_EDA.ipynb
+++ b/db_EDA.ipynb
@@ -2410,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2419,12 +2419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "shortened_df = shortened_df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'author', \n",
-    "                                  'year', 'month', 'category', 'len_article'], axis = 1)"
+    "                                  'year', 'month', 'len_article'], axis = 1)"
    ]
   },
   {
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2446,7 +2446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2455,16 +2455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shortened_df = shortened_df.drop(['split_words', 'first_100_words'], axis = 1)"
+    "#shortened_df = shortened_df.drop(['split_words', 'first_100_words'], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2473,106 +2473,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['      And never more so than in Showtime’s new series revival Some spoilers ahead through episode 4 of season 3 of Twin Peaks.',\n",
-       " 'On May 21st, Showtime brought back David Lynch’s groundbreaking TV series Twin Peaks, and fulfilled a prophecy in the process.',\n",
-       " 'In the second season finale, back in 1991, the spirit of series-defining murder victim Laura Palmer told FBI special agent and series protagonist Dale Cooper, “I’ll see you again in 25 years.” That clip plays again in the first episode of Lynch’s Twin Peaks revival, as a reminder that decades have in fact gone by, Laura’s promise has been carried out, and a series canceled mid-story is back on the air.A lot has changed in 25 years.',\n",
-       " 'The original cast members, who are mostly back on board, have all aged heavily and visibly.',\n",
-       " 'Many of the characters have moved on in life, getting new jobs, forming families, or taking up new obsessions.',\n",
-       " 'But in the opening episode, Dale Cooper was still where the show left him in 1991: trapped in the spirit domain known as the Black Lodge, at the mercy of incomprehensible forces that behave in erratic, alien ways.',\n",
-       " 'In other words, he’s just like anyone who’s actually watching Twin Peaks.',\n",
-       " 'As the third season began, the audience was also stuck back in 1991, waiting to see whether we were going to move on from the show’s many long-gestating cliffhangers.',\n",
-       " 'And we were also at the mercy of the incomprehensible force that is David Lynch, with his erratic, alien storytelling methods.All protagonists are mediators who help tell audiences how to interpret the narrative around them, but Dale Cooper is something else entirely: he is the audience, stumbling through Lynch’s obscure vision, and mutating along with it.',\n",
-       " 'The show’s tone, budget, and format have all changed with the 2017 revival, and Cooper, too, has changed — more so than any other character on the show.',\n",
-       " 'But he’s changed in ways we should recognize.',\n",
-       " 'They’re the same ways we’ve changed, as Twin Peaks has progressed from era-defining hit to weird cable art-experiment.',\n",
-       " 'The old series followed Agent Cooper through the painful, awkward process of maturing as an agent and a man.',\n",
-       " 'And his development happened in parallel with the maturing of a TV audience that had to learn how to follow a new kind of story.All protagonists mediate their stories, but Dale Cooper is something else entirelyToday, viewers have more sophisticated expectations than they did in the 1990s.',\n",
-       " 'They expect long arcs, slow character development, and mysteries that may take hours of air time to explore, let alone to decode.',\n",
-       " 'But Showtime’s new series is still leaving viewers curious, frustrated, baffled, and without the tools to translate what they’re seeing — which is exactly what Agent Cooper seems to be feeling right now as well.',\n",
-       " 'Consider Cooper as he started Twin Peaks back in 1990, as a fresh-faced, perky outsider walking into a mid-sized mountain community with no idea what to expect.',\n",
-       " 'Like the audience, he was entranced by the town of Twin Peaks — its quirky people, its unexpected pleasures, the sheer vividness of everything around him.',\n",
-       " 'Yes, he was there to solve a murder, but he was endlessly confident about his ability to tackle any case.',\n",
-       " 'The audience felt the same natural confidence.',\n",
-       " 'We knew how TV murder mysteries went.',\n",
-       " 'We thought we knew exactly what to expect from that end of the story: some procedural details, some red herrings, some drama, and eventually a solution.',\n",
-       " 'Image: ABC  But like Cooper, we were seduced and distracted by Twin Peaks’ unexpected pleasures, the way the town unfolded on-screen, with all its strange domestic soap opera dramas and oddball interactions.',\n",
-       " 'Like Coop, we found our fun in the unusual texture and color of the world David Lynch and Mark Frost built.',\n",
-       " 'In those early days, Twin Peaks was a popular fad — the two-hour pilot was the season’s highest-rated TV movie — and the popular way to appreciate it was by emulating Dale Cooper’s experience as much as possible.',\n",
-       " 'Lifestyle pieces proliferated in the media, tracking people who threw Peaks parties to watch the show while eating all the things Cooper rhapsodized about in the early episodes: stacks of doughnuts, cherry pie, coffee, and breakfast food.',\n",
-       " '(“Nothing beats the taste sensation when maple syrup collides with ham!” he chirps in episode 4.)',\n",
-       " 'The audience didn’t just want to watch Cooper solving a mystery, they wanted to be him, experiencing his outsized cheer for the world.The audience didn’t just want to watch Cooper solving a mystery, they wanted to be himAs the story went on, though, the tone darkened.',\n",
-       " 'Cooper lost his Boy Scout enthusiasm for food and the smell of Douglas firs.',\n",
-       " 'As more details emerged in the Laura Palmer murder case, another victim surfaced, and the supernatural side of the story emerged, Twin Peaks stopped sending Cooper on wacky cosplay adventures to Canada, and letting him vet his clues with oddball psychic experiments.',\n",
-       " 'It started confronting him with unexpected, alarming experiences.',\n",
-       " 'He took the first one in stride: visiting the Black Lodge in a dream, he returned convinced that he’d solved the murder, and that all would be well once he remembered the solution.',\n",
-       " 'Like us, he didn’t really understand what was going on at that point of the story, but he was still optimistic, and still willing to roll with every strange new revelation.',\n",
-       " 'Then Cooper got shot.',\n",
-       " 'The second season of Twin Peaks opened with him bleeding on the ground, enduring the unhelpful attentions of “the world’s oldest waiter,” listening to a glowing giant who dispenses information without acknowledging that Cooper may not live to use it, and having a strained one-way conversation with his voice-activated tape recorder.',\n",
-       " 'The viewers suffered along with him, through excruciating events that seemed drawn out to the point of perversity.',\n",
-       " 'Suddenly, being Agent Dale Cooper wasn’t fun anymore.',\n",
-       " 'His confidence was punctured, and we were all baffled and helpless together.',\n",
-       " 'Image: ABC  There are moments in season 2 where Cooper bounces back into form, but they’re outnumbered by events that exhaust and chasten him, visibly transforming him into a more solemn, internal man.',\n",
-       " 'Jean Renault held him hostage, beat him, and threatened to murder him, suggesting Cooper was the cause of the town’s growing darkness.',\n",
-       " 'His former FBI partner Windom Earle brought a new chaos to town, and revealed Cooper’s past failings.',\n",
-       " 'Cooper lost his FBI standing and his love interest.',\n",
-       " 'He saw Earle’s soul consumed in front of him.',\n",
-       " 'A murderous monster took his place in the outside world.',\n",
-       " 'By the time season 2 ended, the audience had seen Cooper frightened, powerless, and confused as much as it ever saw him confident and in control.',\n",
-       " 'He stopped being a motive force in the world, and became a passive object in his own story.',\n",
-       " 'The series’s cancellation left viewers just as rudderless and abandoned as he was.‘Twin Peaks’ was about a hero maturing, but also about how the world consumed and broke himCooper’s trend toward impotence over the course of Twin Peaks’ original series run made for an ambitious and personal story.',\n",
-       " 'In the 1990s, TV viewers weren’t used to long-arc serial dramas where the protagonist changed rapidly and irrevocably, the way protagonists are expected to in today’s stories.',\n",
-       " 'But while Twin Peaks’ arc was compelling to many of the fans who stuck with it, it was wearying and demoralizing as well.',\n",
-       " 'The ratings trended steadily and sharply downward, peaking at milestones — the second season premiere, the reveal of who killed Laura Palmer — but still plummeting from the early days.',\n",
-       " 'The ratings drop was a form of feedback from a viewership who, like Cooper, weren’t confident and eager anymore.',\n",
-       " 'They began rejecting the show as it rejected its early tone, and its early promise.',\n",
-       " 'As Twin Peaks developed, it became clear that it was about the maturing of a hero, but it was also about how the vast and incomprehensible aspects of his world claimed, consumed, and broke him.',\n",
-       " 'Viewers couldn’t be blamed for pulling away from that story.And as Lynch withdrew from the show, it became narratively muddled, inconsistent, and sometimes downright silly.',\n",
-       " 'Cooper’s story remains one relatively consistent throughline, but it’s a tragic one, in which a fan-favorite character, the voice and point of view of the series, loses his joy, his freedom, and his capacity to control his own life.',\n",
-       " 'And it became the story of an audience that flocked to the show for lively, quirky surprises, and wound up splintered, divided, and uncertain.',\n",
-       " 'Image: Showtime  Showtime’s series launches with Agent Cooper as thoroughly broken as he’s ever been.',\n",
-       " 'The first two episodes find him still trapped in the Lodge, facing the shrieking spirit of Laura Palmer and an angry human-sized nervous system topped by a pulsing, talking brain.',\n",
-       " 'He’s ejected into space, threatened by an unseen force, and rescued by a blinded woman with unclear motives who helps him in unclear ways.',\n",
-       " 'Finally, he’s fed through an electrical socket into what seems to be a decoy body, living its own life until he takes it over.',\n",
-       " 'By episode 4 of the series, he’s stumbling around in a lobotomized daze, repeating whatever people say to him, bellowing “Help” at random strangers and “Helloooooo!” at slot machines.',\n",
-       " 'He’s confused, helpless, and only slowly regaining the tools he needs to function in this world.And so are we.',\n",
-       " 'The knowledge that Lynch has been given creative control of the show is a form of reassurance, a promise that even if the new Peaks narrative is baffling and bizarre, it’s at least intended.',\n",
-       " 'It’s not the work of slot-fillers trying to pad out an infinitely ongoing program it’s a creative mastermind trying to tell a specific story.',\n",
-       " 'But that story is once again leaving viewers at sea, trying to pick apart Lynch’s work for tiny clues about what they’re watching.',\n",
-       " 'We’re back in Dale Cooper’s position, wandering through a freshly revived world, and trying to catch up with the ways it’s moved on in his absence.',\n",
-       " 'Image: Showtime  The problem with the new Peaks as of episode 4, though, is that we have so little basis for understanding who our audience avatar is right now.',\n",
-       " 'Is Cooper mentally impaired because he’s spent 25 years outside of time and space?',\n",
-       " 'Because he’s stuck in a false, constructed body?',\n",
-       " 'Because Bob claimed some part of him while stealing his identity?',\n",
-       " 'Or just because Lynch thinks it’s funny to have Kyle MacLachlan staggering around blank-faced, with a tie on his head and a dozen-word vocabulary?',\n",
-       " 'What are the stakes of the story at this point?',\n",
-       " 'What is the audience to make of a narrative shaped by a character who isn’t capable of anything but following orders, following glowing magical sigils, and repeating whatever he hears?',\n",
-       " 'Like us, Cooper seems to have virtually no way of interpreting what he’s seeing.',\n",
-       " 'For now, he’s just along for the ride.we have so little basis for understanding our audience avatarThere’s no reason to believe that old Agent Cooper will ever return to Twin Peaks.',\n",
-       " 'The brash, confident, charmingly oddball young man he was in 1990 is long gone, and with good reason, given what he’s been through.',\n",
-       " 'In the same sort of way, no revival could ever recapture what Twin Peaks meant to audiences in 1990, when it was all so new and fresh and strange, so unlike anything that had ever appeared on network television.But he’s still around in some form, still bouncing through the trials of a Lynchian world.',\n",
-       " 'What’s missing now is any sense that he can help us understand what those trials mean.',\n",
-       " '1990s Cooper was an active force in his own story.',\n",
-       " 'He helped us navigate his surroundings, and see them with humor and wonder.',\n",
-       " 'He claimed, perhaps wrongly, but still convincingly, that there was order somewhere in the chaos.',\n",
-       " 'It’s natural for us to want to return to a mode where he can actively participate in his own story, where he’s helping solve its mysteries, instead of acting as its biggest conundrum.',\n",
-       " 'But even with his humanity lost and his agency gone, he still represents us onscreen.',\n",
-       " 'Even when he’s free-floating through a haze of glass boxes and stop-motion nightmares, we’re still with him.',\n",
-       " 'We’re still all Agent Cooper, navigating the mystery, and waiting to see where this is all going.']"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "shortened_df.sent_tokenized[0]"
+    "#shortened_df.sent_tokenized[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shortened_df.to_csv('df_with_gensim_summaries.csv')"
    ]
   },
   {
@@ -2581,45 +2495,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = shortened_df[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    [      And never more so than in Showtime’s ne...\n",
-       "1    [      AlphaGo’s victory isn’t a defeat for hu...\n",
-       "2    [      How a weapon against war became a weapo...\n",
-       "3    [      Genius quietly laid off a bunch of its ...\n",
-       "4    [      Inside the test flight of Facebook’s fi...\n",
-       "5    [      Gadget shopping?, Chances are that as s...\n",
-       "6    [      It was a rare sunny day in Seattle and ...\n",
-       "7    [           Terminator ResurrectedOn set with ...\n",
-       "8    [      We start with shots of Jameson at 9:45P...\n",
-       "9    [  On a crisp afternoon late last year, I made...\n",
-       "Name: content, dtype: object"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df.content.apply(lambda x: sent_tokenize(x, language = 'en'))"
-   ]
   },
   {
    "cell_type": "code",
