--- a/DB_Cleaning_EDA.ipynb
+++ b/DB_Cleaning_EDA.ipynb
@@ -44,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Load in database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -68,6 +75,13 @@
    "outputs": [],
    "source": [
     "df = pd.read_sql_query(\"SELECT * FROM longform\", cnx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Preview of DF"
    ]
   },
   {
@@ -250,6 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#clean up authors names\n",
     "df.author = df.author.str.strip('\\n')"
    ]
   },
@@ -402,6 +417,7 @@
     }
    ],
    "source": [
+    "#check that it worked\n",
     "df.head()"
    ]
   },
@@ -411,6 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cut down columns\n",
     "df = df[['title', 'author', 'content', 'year', 'month', 'category']]"
    ]
   },
@@ -437,6 +454,7 @@
     }
    ],
    "source": [
+    "#check for null values\n",
     "df.isnull().sum()"
    ]
   },
@@ -467,6 +485,7 @@
     }
    ],
    "source": [
+    "#check new shape of df\n",
     "df.shape"
    ]
   },
@@ -493,6 +512,7 @@
     }
    ],
    "source": [
+    "#verify no null values in content column\n",
     "df.isnull().sum()"
    ]
   },
@@ -524,6 +544,7 @@
     }
    ],
    "source": [
+    "#view counts of article categories\n",
     "df.groupby('category').title.count()"
    ]
   },
@@ -533,6 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create new column for the character length of each article\n",
     "df['len_article'] = df.content.str.len()"
    ]
   },
@@ -542,6 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop rows where article is <2,500 or >15,000 characters\n",
     "df = df[(df.len_article >= 2500) & (df.len_article <= 15000)]"
    ]
   },
@@ -684,6 +707,7 @@
     }
    ],
    "source": [
+    "#check new shape after dropping additional rows\n",
     "df.shape"
    ]
   },
@@ -806,42 +830,9 @@
     }
    ],
    "source": [
-    "df.head()"
+    "#preview df\n",
+    "#df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "77"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.content[0].count('. ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -858,6 +849,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create try/accept function to take care of edge case articles\n",
+    "#use gensim summarizer for baseline summary model\n",
     "def gensim_summarizer(x, ratio_):\n",
     "    try:\n",
     "        return summarize(x, ratio = ratio_)\n",
@@ -867,206 +860,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = df.iloc[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>author</th>\n",
-       "      <th>content</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>category</th>\n",
-       "      <th>len_article</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Agent Cooper in Twin Peaks is the audience: on...</td>\n",
-       "      <td>Tasha Robinson</td>\n",
-       "      <td>And never more so than in Showtime’s new...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>12219</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AI, the humanity!</td>\n",
-       "      <td>Sam Byford</td>\n",
-       "      <td>AlphaGo’s victory isn’t a defeat for hum...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>11068</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Massive attack</td>\n",
-       "      <td>Colin Lecher</td>\n",
-       "      <td>How a weapon against war became a weapon...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>14088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Brain drain</td>\n",
-       "      <td>Casey Newton</td>\n",
-       "      <td>Genius quietly laid off a bunch of its e...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>12170</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Facebook takes flight</td>\n",
-       "      <td>Casey Newton</td>\n",
-       "      <td>Inside the test flight of Facebook’s fir...</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>11967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>E-Waste Empire</td>\n",
-       "      <td>Andrew J . Hawkins</td>\n",
-       "      <td>Gadget shopping? Chances are that as soo...</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>13762</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Xbox: Start to Continue</td>\n",
-       "      <td>Andrew Webster</td>\n",
-       "      <td>It was a rare sunny day in Seattle and P...</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>14440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>On set with Arnold: Can Schwarzenegger bring b...</td>\n",
-       "      <td>Jacob Kastrenakes</td>\n",
-       "      <td>Terminator ResurrectedOn set with A...</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>12690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>Can we cure the common hangover?</td>\n",
-       "      <td>Elizabeth Lopatto</td>\n",
-       "      <td>We start with shots of Jameson at 9:45PM...</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>13445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>Surrounded by sound: how 3D audio hacks your b...</td>\n",
-       "      <td>Mona Lalwani</td>\n",
-       "      <td>On a crisp afternoon late last year, I made ...</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Longform</td>\n",
-       "      <td>13336</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                title              author  \\\n",
-       "0   Agent Cooper in Twin Peaks is the audience: on...      Tasha Robinson   \n",
-       "1                                   AI, the humanity!          Sam Byford   \n",
-       "6                                      Massive attack        Colin Lecher   \n",
-       "9                                         Brain drain        Casey Newton   \n",
-       "32                              Facebook takes flight        Casey Newton   \n",
-       "38                                     E-Waste Empire  Andrew J . Hawkins   \n",
-       "39                            Xbox: Start to Continue      Andrew Webster   \n",
-       "80  On set with Arnold: Can Schwarzenegger bring b...   Jacob Kastrenakes   \n",
-       "81                   Can we cure the common hangover?   Elizabeth Lopatto   \n",
-       "84  Surrounded by sound: how 3D audio hacks your b...        Mona Lalwani   \n",
-       "\n",
-       "                                              content  year month  category  \\\n",
-       "0         And never more so than in Showtime’s new...  2017     5  Longform   \n",
-       "1         AlphaGo’s victory isn’t a defeat for hum...  2017     5  Longform   \n",
-       "6         How a weapon against war became a weapon...  2017     4  Longform   \n",
-       "9         Genius quietly laid off a bunch of its e...  2017     3  Longform   \n",
-       "32        Inside the test flight of Facebook’s fir...  2016     7  Longform   \n",
-       "38        Gadget shopping? Chances are that as soo...  2016     6  Longform   \n",
-       "39        It was a rare sunny day in Seattle and P...  2016     6  Longform   \n",
-       "80             Terminator ResurrectedOn set with A...  2015     3  Longform   \n",
-       "81        We start with shots of Jameson at 9:45PM...  2015     3  Longform   \n",
-       "84    On a crisp afternoon late last year, I made ...  2015     2  Longform   \n",
-       "\n",
-       "    len_article  \n",
-       "0         12219  \n",
-       "1         11068  \n",
-       "6         14088  \n",
-       "9         12170  \n",
-       "32        11967  \n",
-       "38        13762  \n",
-       "39        14440  \n",
-       "80        12690  \n",
-       "81        13445  \n",
-       "84        13336  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#test the gensim_summarizer on subset of data\n",
+    "#test_df = df.iloc[:10]\n",
     "#test_df['gensim_summary'] = test_df.content.apply(lambda x : gensim_summarizer(x, ratio_ = .05))"
    ]
   },
@@ -1076,6 +875,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#verify that it worked\n",
     "#test_df"
    ]
   },
@@ -1085,6 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#apply gensim_summarizer function to each row of full dataframe\n",
     "df['gensim_summary'] = df.content.apply(lambda x : gensim_summarizer(x, ratio_ = .05))"
    ]
   },
@@ -1104,8 +905,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save to csv\n",
-    "df.to_csv('full_df_with_gensim_summaries.csv')"
+    "#CHECKPOINT --- save to csv --- NOT NECESSARY IF YOU ARE RUNNING THE WHOLE NOTEBOOK AT ONCE\n",
+    "#df.to_csv('full_df_with_gensim_summaries.csv')"
    ]
   },
   {
@@ -1114,7 +915,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('full_df_with_gensim_summaries.csv')"
+    "#CHECKPOINT --- reload in csv if using the checkpoint\n",
+    "#df = pd.read_csv('full_df_with_gensim_summaries.csv')"
    ]
   },
   {
@@ -1134,7 +936,7 @@
     }
    ],
    "source": [
-    "df.shape"
+    "#df.shape"
    ]
   },
   {
@@ -1172,6 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#save to csv\n",
     "df.to_csv('full_df_with_gensim_summaries.csv')"
    ]
   },
@@ -1181,6 +984,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop unnecessary columns when loading in csv\n",
     "df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'Unnamed: 0.1.1'], axis = 1, inplace = True)"
    ]
   },
@@ -1309,7 +1113,8 @@
     }
    ],
    "source": [
-    "df.head()"
+    "#preview\n",
+    "#df.head()"
    ]
   },
   {
