cleaned notebooks, added LDA

--- a/DB_Cleaning_EDA.ipynb
+++ b/DB_Cleaning_EDA.ipynb
@@ -1257,6 +1257,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0     11277\n",
+       "1.0     10482\n",
+       "2.0     10351\n",
+       "4.0      9803\n",
+       "10.0     9158\n",
+       "6.0      8463\n",
+       "5.0      8343\n",
+       "12.0     6500\n",
+       "11.0     6437\n",
+       "9.0      5445\n",
+       "8.0      5381\n",
+       "7.0      5063\n",
+       "Name: month, dtype: int64"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.month.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
    "outputs": [],
@@ -1524,6 +1556,233 @@
    "source": [
     "ax = sns.countplot(x= 'category', data=shortened_dftened_df)\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newspaper = df.loc[df['category'] == 'newspaper']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45089, 8)"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newspaper.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Charles McDermid                                            253\n",
+       "Associated Press                                            249\n",
+       "Editorial Board                                             222\n",
+       "Mike McPhate                                                220\n",
+       "Karen Zraick and Sandra Stevenson                           195\n",
+       "Dana Milbank                                                184\n",
+       "Vanessa Friedman                                            163\n",
+       "Sam Roberts                                                 162\n",
+       "The New York Times                                          140\n",
+       "Ben Brantley                                                128\n",
+       "Richard Sandomir                                            126\n",
+       "Adam Liptak                                                 125\n",
+       "James Poniewozik                                            121\n",
+       "Chris Cillizza                                              121\n",
+       "Neil Genzlinger                                             118\n",
+       "Philip Bump                                                 115\n",
+       "David Smith                                                 112\n",
+       "Aaron Blake                                                 110\n",
+       "Choe Sang-Hun                                               108\n",
+       "Peter Holley                                                106\n",
+       "Peter Baker                                                 105\n",
+       "Jennifer Rubin                                              103\n",
+       "Brooks Barnes                                               102\n",
+       "Alan Rappeport                                               99\n",
+       "Philip Rucker                                                98\n",
+       "Mark Landler                                                 96\n",
+       "E.J. Dionne Jr.                                              95\n",
+       "Amy B Wang                                                   95\n",
+       "Greg Sargent                                                 93\n",
+       "Matt Zapotosky                                               90\n",
+       "                                                           ... \n",
+       "Manny Fernandez and Michael Wines                             1\n",
+       "Pete Croatto                                                  1\n",
+       "Vivien K. Burt                                                1\n",
+       "Jack Nicas and Natasha Singer                                 1\n",
+       "David Streitfeld and Jose A. Del Real                         1\n",
+       "Fatima Shahbaz                                                1\n",
+       "Conor Dougherty and Jason M. Bailey                           1\n",
+       "Helene Elliott and Curtis Zupke                               1\n",
+       "Isabella Kwai and Xiuzhong Xu                                 1\n",
+       "Nathaniel Persily                                             1\n",
+       "Leslie Macmillan and Tom Mashberg                             1\n",
+       "Steve Inskeep                                                 1\n",
+       "Robert Frank and Karl Russell                                 1\n",
+       "Aidan Foster-Carter                                           1\n",
+       "Nicole Perlroth and Cade Metz                                 1\n",
+       "James Poniewozik and Margaret Lyons                           1\n",
+       "Alexandra Zavis, Zaid al-Alayaa                               1\n",
+       "Nicholas Fandos and Matt Apuzzo                               1\n",
+       "Jackie Ashley                                                 1\n",
+       "Kristen Chick                                                 1\n",
+       "Brooks Barnes, Rachel Abrams and Jodi Kantor                  1\n",
+       "Steven Erlanger and Gerry Mullany                             1\n",
+       "Helene Cooper and Choe Sang-Hun                               1\n",
+       "Jess Bidgood and Richard Fausset                              1\n",
+       "Mitch Smith and Anemona Hartocollis                           1\n",
+       "Vanessa Friedman And Elizabeth Paton                          1\n",
+       "Glenn Thrush, Maggie Haberman and Julie Hirschfeld Davis      1\n",
+       "Dino Grandoni                                                 1\n",
+       "Jonathan Weisman and Yamiche Alcindor                         1\n",
+       "Nathan Christensen                                            1\n",
+       "Name: author, Length: 9296, dtype: int64"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newspaper.author.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "general = df.loc[df['category'] == 'general']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18738, 8)"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "general.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "John Hayward                                          451\n",
+       "Matthew Yglesias                                      260\n",
+       "David A. Graham                                       256\n",
+       "Joel B. Pollak                                        246\n",
+       "German Lopez                                          233\n",
+       "Bob Price                                             227\n",
+       "Aaron Klein                                           224\n",
+       "Frances Martel                                        219\n",
+       "Breitbart News                                        211\n",
+       "Dara Lind                                             187\n",
+       "Brad Plumer                                           179\n",
+       "Julia Belluz                                          174\n",
+       "Todd VanDerWerff                                      173\n",
+       "Rosa Inocencio Smith                                  172\n",
+       "Jeff Stein                                            168\n",
+       "Zack Beauchamp                                        162\n",
+       "Matthew Boyle                                         160\n",
+       "Andrew Prokop                                         158\n",
+       "David Sims                                            153\n",
+       "Dr. Susan Berry                                       151\n",
+       "Borzou Daragahi                                       146\n",
+       "Mike Giglio                                           137\n",
+       "Julia Hahn                                            136\n",
+       "Warner Todd Huston                                    135\n",
+       "Brian Resnick                                         135\n",
+       "Daniel Nussbaum                                       130\n",
+       "Dylan Matthews                                        129\n",
+       "Elaine Godfrey                                        128\n",
+       "Jerome Hudson                                         128\n",
+       "Neil Munro                                            123\n",
+       "                                                     ... \n",
+       "Arielle Bernstein                                       1\n",
+       "Alice Ollstein, Tierney Sneed                           1\n",
+       "Krystie Lee Yandoli                                     1\n",
+       "Filipe Campante and David Yanagizawa-Drott              1\n",
+       "David Miller                                            1\n",
+       "Philip Ball                                             1\n",
+       "Samantha Montano                                        1\n",
+       "Jason Greenblatt                                        1\n",
+       "Siraj Datoo                                             1\n",
+       "Alexander Hertel-Fernandez and Theda Skocpol            1\n",
+       "Steve Ronnebeck                                         1\n",
+       "Rossalyn Warren                                         1\n",
+       "Zuzana Boehmová                                         1\n",
+       "Mark Peffley, Marc L. Hutchison, and Michal Shamir      1\n",
+       "David Randall                                           1\n",
+       "Kristin Goss                                            1\n",
+       "Tim Newcomb                                             1\n",
+       "Janelle Harris                                          1\n",
+       "Marcus J. Moore                                         1\n",
+       "Mokhtar Awad                                            1\n",
+       "Ed Kressy                                               1\n",
+       "Jon Christian                                           1\n",
+       "David R. Wheeler                                        1\n",
+       "Ned Resnikoff                                           1\n",
+       "Melissa Hanham                                          1\n",
+       "Will Di Novi                                            1\n",
+       "Xavier Harding                                          1\n",
+       "Jon Stanley                                             1\n",
+       "Melissa Nightingale                                     1\n",
+       "JILL COLVIN                                             1\n",
+       "Name: author, Length: 1459, dtype: int64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "general.author.value_counts()"
    ]
   },
   {
