--- a/scratch_notebook.ipynb
+++ b/scratch_notebook.ipynb
@@ -128,11 +128,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> LDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vectorizer = CountVectorizer(analyzer='word',       \n",
+    "                             min_df=3,                        # minimum reqd occurences of a word \n",
+    "                             stop_words= stops,             # remove stop words\n",
+    "                             #token_pattern='[a-zA-Z0-9]{3,}',  # num chars > 3\n",
+    "                             # max_features=50000,             # max number of uniq words\n",
+    "                            )\n",
+    "\n",
+    "data_vectorized = vectorizer.fit_transform(df['lemmatize_first_100'])\n",
+    "\n",
+    "#materialize the sparse data\n",
+    "data_dense = data_vectorized.todense()\n",
+    "\n",
+    "#compute Sparsicity = Percentage of Non-Zero cells\n",
+    "print(\"Sparsicity: \", ((data_dense > 0).sum()/data_dense.size)*100, \"%\")\n",
+    "\n",
+    "# Build LDA Model\n",
+    "lda_model = LatentDirichletAllocation(n_topics=20,               # Number of topics\n",
+    "                                      max_iter=10,               # Max learning iterations\n",
+    "                                      learning_method='online',   \n",
+    "                                      random_state=100,          # Random state\n",
+    "                                      batch_size=128,            # n docs in each learning iter\n",
+    "                                      evaluate_every = -1,       # compute perplexity every n iters, default: Don't\n",
+    "                                      n_jobs = -1,               # Use all available CPUs\n",
+    "                                     )\n",
+    "\n",
+    "lda_output = lda_model.fit_transform(data_vectorized)\n",
+    "\n",
+    "print(lda_model)  # Model attributes\n",
+    "\n",
+    "# Log Likelyhood: Higher the better\n",
+    "print(\"Log Likelihood: \", lda_model.score(data_vectorized))\n",
+    "\n",
+    "# Perplexity: Lower the better. Perplexity = exp(-1. * log-likelihood per word)\n",
+    "print(\"Perplexity: \", lda_model.perplexity(data_vectorized))\n",
+    "\n",
+    "# See model parameters\n",
+    "pprint(lda_model.get_params())\n",
+    "\n",
+    "def show_topics(vectorizer, lda_model, n_words=10):\n",
+    "    keywords = np.array(vectorizer.get_feature_names())\n",
+    "    topic_keywords = []\n",
+    "    for topic_weights in lda_model.components_:\n",
+    "        top_keyword_locs = (-topic_weights).argsort()[:n_words]\n",
+    "        topic_keywords.append(keywords.take(top_keyword_locs))\n",
+    "    return topic_keywords\n",
+    "\n",
+    "df.lemmatize_first_100[0]\n",
+    "\n",
+    "show_topics(vectorizer, lda_model, n_words=5)"
+   ]
   }
  ],
  "metadata": {
