add images folder, continued clustering

--- a/summarizer_cosine_similarity.ipynb
+++ b/summarizer_cosine_similarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,16 +13,6 @@
       "[nltk_data]     /Users/austinkrause/nltk_data...\n",
       "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 402,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -47,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,14 +785,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +848,7 @@
        "array([3, 5, 2])"
       ]
      },
-     "execution_count": 654,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +905,7 @@
        "\"Fortunately, millions of smart drivers haveused EverQuote™'s free service to save hundreds on their insurance bills. It’s really no wonder that with so many drivers saving money, EverQuote™ is gaining momentum. Just imagine what you could do with the money you save!\""
       ]
      },
-     "execution_count": 657,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,24 +916,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 4, 5]\n",
+      "[1, 2, 3]\n",
       "6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'President Donald Trump and his Polish counterpart Andrzej Duda were to announce higher US troop levels in Poland on Wednesday, with the main question being whether Washington will defy Russian objections to establish an American base in the NATO country. Spooked by resurgent Russia\\'s seizing control of territory in Georgia and Ukraine over the last decade, Duda has tried to charm the US president, even touting the idea of Poland building a \"Fort Trump\" to house thousands of US soldiers. Krzysztof Szczerski, an adviser to the Polish president, said the general concept of a \"Fort Trump\" was on the agenda Wednesday and that the US presence \"will increase both in quality as well as quantity.\"'"
+       "'A senior Trump administration official said the White House meeting would see the two leaders make a significant announcement.\" Whether Trump will risk irritating Moscow with a base or take the simpler option of adding more troops to the current non-permanent force was unclear. Located deep in what used to be Soviet-dominated eastern Europe, Poland is a member of NATO but has long wanted deeper US commitment.'"
       ]
      },
-     "execution_count": 623,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,8 +944,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -971,7 +963,7 @@
        "'      And never more so than in Showtime’s new series revival Some spoilers ahead through episode 4 of season 3 of Twin Peaks. On May 21st, Showtime brought back David Lynch’s groundbreaking TV series Twin Peaks, and fulfilled a prophecy in the process. In the second season finale, back in 1991, the spirit of series-defining murder victim Laura Palmer told FBI special agent and series protagonist Dale Cooper, “I’ll see you again in 25 years.” That clip plays again in the first episode of Lynch’s Twin Peaks revival, as a reminder that decades have in fact gone by, Laura’s promise has been carried out, and a series canceled mid-story is back on the air.A lot has changed in 25 years. And his development happened in parallel with the maturing of a TV audience that had to learn how to follow a new kind of story.All protagonists mediate their stories, but Dale Cooper is something else entirelyToday, viewers have more sophisticated expectations than they did in the 1990s. But Showtime’s new series is still leaving viewers curious, frustrated, baffled, and without the tools to translate what they’re seeing — which is exactly what Agent Cooper seems to be feeling right now as well. Like us, he didn’t really understand what was going on at that point of the story, but he was still optimistic, and still willing to roll with every strange new revelation. The series’s cancellation left viewers just as rudderless and abandoned as he was.‘Twin Peaks’ was about a hero maturing, but also about how the world consumed and broke himCooper’s trend toward impotence over the course of Twin Peaks’ original series run made for an ambitious and personal story. For now, he’s just along for the ride.we have so little basis for understanding our audience avatarThere’s no reason to believe that old Agent Cooper will ever return to Twin Peaks. In the same sort of way, no revival could ever recapture what Twin Peaks meant to audiences in 1990, when it was all so new and fresh and strange, so unlike anything that had ever appeared on network television.But he’s still around in some form, still bouncing through the trials of a Lynchian world. We’re still all Agent Cooper, navigating the mystery, and waiting to see where this is all going.'"
       ]
      },
-     "execution_count": 624,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +991,7 @@
        "'Current systems at land borders in Hong Kong perform facial recognition through rolled-down windows, simply to avoid the confounding effect of the glass.But over the past few months, a new system has emerged to solve that problem, developed at Oak Ridge National Laboratory at the request of US Customs and Border Patrol. If effective, it could pave the way for far more aggressive deployment of facial recognition at automotive crossings.“The camera they have developed can go into a vehicle through tint and glare.”The system arose out of an initiative called biometric exit, which mandates a face or fingerprint verification of every US visitor as they exit the country. Colvin Pitts, a senior architect at Lytro, says the camera’s depth-sensing capability could be particularly useful when cleaning up an image for facial recognition. That’s consistent with Manaher’s early assessment, which described the system as “very prototypey.” “There is very little practical way to opt out of this system.”As the technology develops, it could enable ambitious new facial recognition projects, particularly when combined with automatic license plate recognition or ALPR technology. Last Year, New York governor Andrew Cuomo announced a plan called New York Crossings that would install facial recognition cameras alongside ALPR systems at every bridge and tunnel leading into Manhattan, although experts say there are still significant logistical challenges to such a system.'"
       ]
      },
-     "execution_count": 660,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
