added new eda images and saved models

--- a/summarizer_cosine_similarity.ipynb
+++ b/summarizer_cosine_similarity.ipynb
@@ -80,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -792,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,17 +813,6 @@
     "    #declare how many sentences to use in summary\n",
     "    num_sentences = text_df.shape[0]\n",
     "    num_summary_sentences = int(np.ceil(num_sentences**.5))\n",
-    "#     if sentences_:\n",
-    "#         if num_sentences < sentences:\n",
-    "#             print('Number of summary sentences must be less than the number sentences in article')\n",
-    "#         else:\n",
-    "#             num_summary_sentences = int(sentences_)\n",
-    "    \n",
-    "#     elif ratio:\n",
-    "#         num_summary_sentences = int(np.ceil(num_sentences * ratio))\n",
-    "     \n",
-    "#     else: #use the square root of the total number of sentences\n",
-    "#         num_summary_sentences = int(np.ceil(num_sentences**.5))\n",
     "        \n",
     "    #find cosine similarity for all sentences\n",
     "    similarities = cosine_similarity(trsfm, trsfm)\n",
@@ -839,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +839,7 @@
        "array([3, 5, 2])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +896,7 @@
        "\"Fortunately, millions of smart drivers haveused EverQuote™'s free service to save hundreds on their insurance bills. It’s really no wonder that with so many drivers saving money, EverQuote™ is gaining momentum. Just imagine what you could do with the money you save!\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
